--- a/styles.css
+++ b/styles.css
@@ -161,6 +161,7 @@ header {
   background-size: cover;
   background-position: center center;
   position: relative;
+  color: white !important;
 }
 
 .section-header {
