Fix section header color in Firefox

--- a/styles.css
+++ b/styles.css
@@ -167,6 +167,7 @@ header {
 .section-header {
   background-color: #1c1b1b70;
   border-radius: 16px;
+  color: white !important;
 }
 
 .paragraph-header {
