style changes background image

--- a/styles.css
+++ b/styles.css
@@ -162,6 +162,7 @@ header {
   background-position: center center;
   position: relative;
   color: white !important;
+  height:690px;
 }
 
 .section-header {
